# gar

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt  config.h.in  garConfig.cmake.in  vcpkg.json
include/: gar.h
include/gar/: exports.h  gar.h  gar.hpp  reader.h  reader.hpp  writer.h  writer.hpp
src/: common.h  fmap.c  fmap.h  gar.c  reader.c  writer.c
tool/: main.c  main.cpp
